# HexGoL-Android

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/hexgol/: Cargo.toml  build.rs
app/src/main/hexgol/game-activity-csrc/game-activity/: GameActivity.cpp  GameActivity.h
app/src/main/hexgol/game-activity-csrc/game-activity/native_app_glue/: android_native_app_glue.c  android_native_app_glue.h
app/src/main/hexgol/game-activity-csrc/game-text-input/: gametextinput.cpp  gametextinput.h
app/src/main/hexgol/src/: lib.rs  shader.wgsl
app/src/main/hexgol/src/ffi/: ffi_aarch64.rs  ffi_x86_64.rs
app/src/main/hexgol/src/game/: hex.rs  mod.rs
app/src/main/hexgol/src/renderer/: mod.rs
app/src/main/java/kotexander/hexgol/: MainActivity.kt
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
